Update version and enhance custom bush functionality
- Bump version in `CustomBush.csproj` to `1.5.2-beta.6`.
- Add new namespaces in `ModEntry.cs` and introduce `OnDayStarted` event handler.
- Improve caching in `ModApi.cs` for item retrieval and mod data.
- Refactor `BushExtensions` for better data management.
- Enhance custom bush handling in `ModPatches.cs`.
- Add `logo.png` for branding purposes.
- Update `CustomBushAutomate.csproj` with additional update keys.

--- a/CustomBushAutomate/CustomBushAutomate.csproj
+++ b/CustomBushAutomate/CustomBushAutomate.csproj
@@ -10,7 +10,7 @@
 		<EnableHarmony>true</EnableHarmony>
 		<RootNamespace>LeFauxMods.CustomBushAutomate</RootNamespace>
 		<UniqueId>furyx639.CustomBushAutomate</UniqueId>
-		<UpdateKeys>Nexus:31027</UpdateKeys>
+		<UpdateKeys>Nexus:31027, CurseForge:1184931</UpdateKeys>
 		<RepositoryUrl>https://github.com/LeFauxMatt/CustomBush</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
