Update to version 2.0.0-beta.1 with refactoring
- Renamed `Constants` to `ModConstants` and updated references.
- Modified `GetApi` method in `ModApi` to remove `IModHelper` parameter.
- Simplified bush data checks by removing `id` parameter from `TryGetBush`.
- Updated logging to use `customBush.Id` for clarity.
- Refactored `CustomBushData` to use `ICustomBushDrops` and introduced `CustomBushDrops` class.
- Changed `ModState` to initialize `ModApi` as a static property.
- Updated `ModPatches` and `BushExtensions` to use `ModConstants`.
- Added new methods for custom bush behavior and updated existing methods.
- Updated subproject commit reference in `FauxCore`.

--- a/CustomBush/CustomBush.csproj
+++ b/CustomBush/CustomBush.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <Name>Custom Bush</Name>
     <Description>Framework which allows custom bushes to be added to the game which work like the tea sapling.</Description>
-    <Version>1.5.2</Version>
+    <Version>2.0.0-beta.1</Version>
     <EnableHarmony>true</EnableHarmony>
     <RootNamespace>LeFauxMods.CustomBush</RootNamespace>
     <UniqueId>furyx639.CustomBush</UniqueId>
